# studies-data-structures-and-algorithms

./: .gitignore  CMakeLists.txt  README.md  lista_simplesmente_encadeada
01. estruturas_de_dados/01. listas_introducao/: README.md  lista_v2.c
01. estruturas_de_dados/02. listas/: lista_duplamente_encadeada.c
01. estruturas_de_dados/03. filas_introducao/: README.md  fila_v1.c
01. estruturas_de_dados/04. filas/: README.md
01. estruturas_de_dados/05. pilhas_introducao/: README.md
01. estruturas_de_dados/06. pilhas/: README.md  pilha_simplesmente_encadeada.c
01. estruturas_de_dados/07. arvores/: README.md  arvore_binaria_busca.c
01. estruturas_de_dados/08. hashmap/: README.md  hashmap.c
02. listas/: lista_simplesmente_encadeada.c
02. metodos_de_ordenacao/01. bubble_sort/: README.md  bubble_sort.py
02. metodos_de_ordenacao/02. insertion_sort/: README.md  insertion_sort.py
02. metodos_de_ordenacao/03. selection_sort/: README.md  selection_sort.py
02. metodos_de_ordenacao/04. shell_sort/: README.md  shell_sort.py
02. metodos_de_ordenacao/05. quick_sort/: README.md  quick_sort.py
02. metodos_de_ordenacao/06. merge_sort/: README.md  merge_sort.py
02. metodos_de_ordenacao/07. counting_sort/: README.md  counting_sort.py
02. metodos_de_ordenacao/08. bucket_sort/: README.md  bucket_sort.py
02. metodos_de_ordenacao/09. radix_sort/: README.md  radix_sort.py
03. metodos_de_pesquisa/01. busca_linear/: README.md  busca_linear.py
03. metodos_de_pesquisa/02. busca_binaria/: README.md  busca_binaria.py
04. filas/: fila_duplamente_encadeada  fila_simplesmente_encadeada  fila_simplesmente_encadeada_v2.c
06. pilhas/: pilha_duplamente_encadeada  pilha_simplesmente_encadeada
07. arvores/: arvore_binaria  arvore_binaria.c
1. listas_introducao/: README.md  implementacao_v3.c  lista_v3.c
2. listas/: README.md  lista_circular_duplamente_encadeada.c  lista_circular_simplesmente_encadeada.c  lista_duplamente_encadeada.c  lista_simplesmente_encadeada  lista_simplesmente_encadeada.c
2. listas/lista_simplesmente_encadeada.dSYM/Contents/: Info.plist
2. listas/lista_simplesmente_encadeada.dSYM/Contents/Resources/DWARF/: lista_simplesmente_encadeada
2. listas/lista_simplesmente_encadeada.dSYM/Contents/Resources/Relocations/aarch64/: lista_simplesmente_encadeada.yml
3. filas_introducao/: README.md  fila_v1.c
4. filas/: fila_duplamente_encadeada.c  fila_simplesmente_encadeada.c  fila_simplesmente_encadeada_v1.c  fila_simplesmente_encadeada_v2.c
5. pilhas_introducao/: README.md  pilha_v1  pilha_v1.c
6. pilhas/: README.md  pilha_duplamente_encadeada.c
7. arvores/: README.md  arvore_binaria.c
listas/: README.md  implementacao_v1.c  implementacao_v2.c  implementacao_v3.c
listas_introducao/: README.md
lists/: README.md  circular_doubly_linked_list.c  circular_singly_linked_list.c  doubly_linked_list.c  lista_circular_simplesmente_encadeada  lista_circular_simplesmente_encadeada.c  lista_duplamente_encadeada.c  singly_linked_list.c
lists_introduction/: README.md
